--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
     <header>
       <h1><a href="{{ "/" | relative_url }}">{{ site.title }}</a></h1>
       <nav>
-        <a href="{{ "/" | relative_url }}">Home</a> |
-        <a href="{{ "/about.html" | relative_url }}">About</a> |
-        <a href="{{ "/resume.html" | relative_url }}">Resume</a>
+        <a href="{{ "/" | relative_url }}">Projects</a> |
+        <a href="{{ "/about.html" | relative_url }}">Visualizations</a> |
+        <a href="{{ "/resume.html" | relative_url }}">Skills/Tools</a>
       </nav>
     </header>
 
