--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,11 @@
 
         <div class="drawer-container">
           <div class="drawer">
-            {%- include nav-items.html paths = page_paths %}
+            <ul class="nav-links">
+              <li><a href="/about/">About</a></li>
+              <li><a href="/projects/">Projects</a></li>
+              <li><a href="https://github.com/oconellryan">GitHub</a></li>
+            </ul>
           </div>
         </div>
         <div class="slab">
