--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,11 @@
           </div>
         </div>
         <div class="slab">
-          {%- include nav-items.html paths = page_paths %}
+          <ul class="nav-links">
+              <li><a href="/about/">About</a></li>
+              <li><a href="/projects/">Projects</a></li>
+              <li><a href="https://github.com/oconellryan">GitHub</a></li>
+            </ul>
         </div>
       </nav>
     {%- endunless %}
