--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,19 +15,23 @@
 
         <div class="drawer-container">
           <div class="drawer">
-            <ul class="nav-links">
-              <li><a href="/about/">About</a></li>
-              <li><a href="/projects/">Projects</a></li>
-              <li><a href="https://github.com/oconellryan">GitHub</a></li>
-            </ul>
+            <nav class="site-nav">
+              <ul class="nav-links">
+                <li><a class="page-link" href="/about/">About</a></li>
+                <li><a class="page-link" href="/projects/">Projects</a></li>
+                <li><a class="page-link" href="https://github.com/oconellryan">GitHub</a></li>
+              </ul>
+            </nav>
           </div>
         </div>
         <div class="slab">
-          <ul class="nav-links">
-              <li><a href="/about/">About</a></li>
-              <li><a href="/projects/">Projects</a></li>
-              <li><a href="https://github.com/oconellryan">GitHub</a></li>
+          <nav class="site-nav">
+            <ul class="nav-links">
+              <li><a class="page-link" href="/about/">About</a></li>
+              <li><a class="page-link" href="/projects/">Projects</a></li>
+              <li><a class="page-link" href="https://github.com/oconellryan">GitHub</a></li>
             </ul>
+          </nav>
         </div>
       </nav>
     {%- endunless %}
