--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,39 +1,16 @@
 <header class="site-header">
-
   <div class="wrapper">
-    {%- assign default_paths = site.pages | map: "path" -%}
-    {%- assign page_paths = site.minima.nav_pages | default: default_paths -%}
-    {%- assign page_titles = site.pages | map: 'title' | compact %}
-    <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" rel="author" href="{{ '/' | relative_url }}">
+      {{ site.title | escape }}
+    </a>
 
-    {%- unless page_titles == empty %}
-      <nav class="site-nav">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-        <label for="nav-trigger">
-          <span class="menu-icon fas fa-bars fa-lg"></span>
-        </label>
-
-        <div class="drawer-container">
-          <div class="drawer">
-            <nav class="site-nav">
-              <ul class="nav-links">
-                <li><a class="page-link" href="/about/">About</a></li>
-                <li><a class="page-link" href="/projects/">Projects</a></li>
-                <li><a class="page-link" href="https://github.com/oconellryan">GitHub</a></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-        <div class="slab">
-          <nav class="site-nav">
-            <ul class="nav-links">
-              <li><a class="page-link" href="/about/">About</a></li>
-              <li><a class="page-link" href="/projects/">Projects</a></li>
-              <li><a class="page-link" href="https://github.com/oconellryan">GitHub</a></li>
-            </ul>
-          </nav>
-        </div>
-      </nav>
-    {%- endunless %}
+    <nav class="site-nav">
+      <ul class="nav-links">
+        <li><a class="page-link" href="/">Home</a></li>
+        <li><a class="page-link" href="/about/">About</a></li>
+        <li><a class="page-link" href="/projects/">Projects</a></li>
+        <li><a class="page-link" href="https://github.com/oconellryan">GitHub</a></li>
+      </ul>
+    </nav>
   </div>
 </header>
