--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <a class="site-title" rel="author" href="{{ '/' | relative_url }}">
       {{ site.title | escape }}
     </a>
-
+{%- comment -%}
     <nav class="site-nav">
       <ul class="nav-links">
         <li><a class="page-link" href="/">Home</a></li>
@@ -12,5 +12,6 @@
         <li><a class="page-link" href="https://github.com/oconellryan">GitHub</a></li>
       </ul>
     </nav>
+{%- endcomment -%}
   </div>
 </header>
